Fixed logo which was covering up som ethings.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -38,6 +38,10 @@ nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
   width: 100%;
 }
 
+.brand-logo {
+  line-height: 0px;
+}
+
 .profile-carousel-data-view {
   position: absolute;
   top: 100px;
